Change List.getLast() to List.get(List.size() - 1) as getLast is a Java 21 feature
git-svn-id: svn://vsl.cis.udel.edu/civl/trunk@5962 fb995dde-84ed-4084-dfe6-e5aef3e2452c